# gaussian-splatting

./: .gitmodules  README.md  environment.yml  metrics.py  pyproject.toml  render.py  train.py
src/gaussian_splatting/: trainer.py
src/gaussian_splatting/arguments/: __init__.py
src/gaussian_splatting/gaussian_renderer/: __init__.py  network_gui.py
src/gaussian_splatting/scene/: __init__.py  appearance_network.py  cameras.py  dataset_readers.py  gaussian_model.py  gaussian_model_radegs.py
src/gaussian_splatting/utils/: camera_utils.py  general_utils.py  graphics_utils.py  loss_utils.py  mesh.py  sh_utils.py  viewer.py
test/: test_rasterizer.py
