[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussian_splatting"
version = "0.0.8"
description = "<<<ENTER_DESCRIPTION>>>"
authors = [
    { name = "Tobias Kirschstein", email = "tobias.kirschstein@gmail.com" },
]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
# urls = { Documentation = "<<<ENTER_LINK_TO_DOCUMENTATION>>>" }
# Main dependencies
dependencies = [
    "torch",
    "plyfile==0.8.1",
    "tqdm",
    "diff_gaussian_rasterization@git+https://github.com/tobias-kirschstein/diff-gaussian-rasterization-distwar.git",
    "depth_diff_gaussian_rasterization@git+https://github.com/tobias-kirschstein/depth-diff-gaussian-rasterization.git",
    "simple_knn@git+https://gitlab.inria.fr/bkerbl/simple-knn.git",
    "dreifus",
    "viser"
]

[project.optional-dependencies]
# Development packages, install via <<<PROJECT_NAME>>>[dev]
dev = [
]

[project.scripts]
# E.g., ns-download-data = "scripts.downloads.download_data:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gaussian_splatting*"]  # Keep the '*', otherwise submodules are not found